# =============================================================================
# omni-driver-e1000e ŌĆö Intel e1000e first-party user-space driver scaffold
# =============================================================================
# First-party driver for the Intel e1000e family (PCI Express Ethernet
# controllers: 82574L, I217-LM/V, I218-LM/V, I219-LM/V). Specified by
# `OIP-Driver-Net-015` ┬¦ S5 and loaded via the `DriverLoad` syscall flow
# specified by `OIP-Driver-Framework-013` ┬¦ S5.
#
# This is the **P6.7.8.6 scaffold** delivery: skeleton-only `no_std + alloc`
# library that locks the public surface (PCI vendor/device IDs, CSR
# register offsets, RX/TX ring depth bounds, interrupt mask bit positions,
# 13-step bring-up FSM) without wiring any syscall path. The bootable image
# sibling (`crates/omni-driver-e1000e-image`, excluded from the default
# workspace matrix like `kernel-runner` / `omni-driver-nvme-image`) lands
# in a follow-up sub-step (P6.7.8.7) together with the actual
# `MmioMap`/`DmaMap`/`IrqAttach` invocations.
#
# Pattern mirrors `omni-driver-net-virtio` (P6.7.8.2) and `omni-driver-nvme`
# (P6.7.8.4): the lib hosts the auditable logic compiled in the default
# workspace matrix; the runtime ELF lives in the excluded sibling image
# crate. Same split as `omni-kernel` Ōåö `kernel-runner`.
# =============================================================================

[package]
name             = "omni-driver-e1000e"
description      = "OMNI OS first-party Intel e1000e user-space driver (OIP-Driver-Net-015 ┬¦ S5 scaffold)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
# The scaffold is deliberately dependency-light: no `omni-types`, no
# `omni-capability`, no `omni-crypto`. The driver's eventual capability
# surface (MmioMap / DmaMap / IrqAttach / DriverLoad) is mediated by the
# kernel; the user-space driver process only needs to issue raw syscalls
# and shape its own data structures. Shared NET channel types
# (`NetRequest`/`NetResponse`/`NetEvent`) live in a future
# `omni-driver-net-common` crate (OIP-015 ┬¦ Reference Implementation);
# they are not needed at the scaffold stage because the FSM operates only
# on FSM-internal state.
[dependencies]

[dev-dependencies]
