# =============================================================================
# omni-driver-net-virtio — virtio-net first-party user-space driver scaffold
# =============================================================================
# First-party driver for virtio-net (PCI vendor `0x1AF4`, device `0x1041`
# modern / `0x1000` legacy). Specified by `OIP-Driver-Net-015` § S4 and
# loaded via the `DriverLoad` syscall flow specified by
# `OIP-Driver-Framework-013` § S5.
#
# This is the **P6.7.8.2 scaffold** delivery: skeleton-only `no_std + alloc`
# library that locks the public surface (virtio constants, virtqueue layout
# types, manifest TOML template) without wiring any syscall path. The
# bootable image sibling (`crates/omni-driver-net-virtio-image`, excluded
# from the default workspace matrix like `kernel-runner`) lands in
# P6.7.8.3 together with the device bring-up state machine.
#
# Why a `no_std + alloc` library at this stage:
#   - Matches the precedent `omni-kernel` (lib, workspace member) +
#     `kernel-runner` (excluded image sibling) — the lib hosts the
#     auditable logic, the image crate hosts the boot harness.
#   - Keeps the workspace `cargo build --workspace --all-features` green
#     on host targets without a cross-toolchain (the bootable bin would
#     require `x86_64-unknown-none` which is gated to CI / hardware boxes).
#   - Lets clippy / cargo doc / cargo test exercise the crate in the
#     default workspace matrix immediately.
# =============================================================================

[package]
name             = "omni-driver-net-virtio"
description      = "OMNI OS first-party virtio-net user-space driver (OIP-Driver-Net-015 § S4 scaffold)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
# The scaffold is deliberately dependency-light: no `omni-types`, no
# `omni-capability`, no `omni-crypto`. The driver's eventual capability
# surface (MmioMap / DmaMap / IrqAttach / DriverLoad) is mediated by the
# kernel; the user-space driver process only needs to issue raw syscalls
# and shape its own data structures. We will reintroduce dependencies in
# P6.7.8.3 when the bring-up state machine starts touching real types
# (`MacAddress`, `IrqVector`, etc. — likely from a new
# `omni-driver-net-common` crate per OIP-015 § R8).
[dependencies]

[dev-dependencies]
