# =============================================================================
# omni-hal — Hardware Abstraction Layer
# =============================================================================
# Uniform traits for tensor accelerators, networking, storage, and TEEs.
# Userspace services target HAL traits; concrete backends are loaded at
# runtime per available hardware.
# =============================================================================

[package]
name             = "omni-hal"
description      = "Hardware Abstraction Layer for OMNI OS — Tensor, Network, Storage, and TEE traits."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Feature flags
# -----------------------------------------------------------------------------
# Forwarded to `omni-tee` so a consumer enabling `omni-hal/tdx` transitively
# enables `omni-tee/tdx`. This keeps the feature surface coherent across the
# workspace: a user picks the TEE backend at the HAL layer and the
# underlying crate follows.
# -----------------------------------------------------------------------------
[features]
default      = ["mock"]
mock         = ["omni-tee/mock"]
tdx          = ["omni-tee/tdx"]
sev-snp      = ["omni-tee/sev-snp"]
all-backends = ["tdx", "sev-snp", "mock"]

[dependencies]
omni-types  = { workspace = true }
omni-tee    = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
# `tokio` is required in dev-only context to drive `#[tokio::test]` async
# test cases for the CpuBackend.  It is NOT a production dependency because
# omni-hal's trait surface is executor-agnostic and the crate targets a
# no_std future (Phase 6).
tokio = { workspace = true }
# `criterion` is used for benchmark harness (tech-spec pin: 0.5.x).
# Apache-2.0/MIT dual-licensed; allowlist-compatible.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name        = "quant_bench"
harness     = false
